# Production_WebApp

./: .gitignore  LICENSE  README.md
src/: database.db  docker-compose.yaml  pyproject.toml
src/Certs/: account.key  dhparam.pem
src/Certs/default_server/: default_server.crt  default_server.key
src/Certs/sample-site.com/local/: chained.crt  domain.csr  domain.key  signed.crt
src/Nginx/: Dockerfile  default.conf
src/Nginx/public/: index.html
src/api/: Dockerfile  create_table.py  db.py  main.py
src/api/cron/: main.py
src/api/cruds/: d_playlist_musics.py  insert.py  musics.py  n_playlist_musics.py  playlist_musics.py  playlists.py  read.py  user_playlists.py  users.py
src/api/db/: conn.py  create_table.py  test_select.py
src/api/haven/: db_model.py
src/api/lib/: library.py
src/api/libs/: plalylist_url_handling.py  random_string.py
src/api/models/: db_model.py  db_test_model.py
src/api/routers/: d_playlist_musics.py  done.py  firtst_register.py  interface.py  musics.py  n_playlist_musics.py  playlist_musics.py  playlists.py  task.py  user_playlists.py  users.py
src/api/schemas/: d_playlist_musics.py  musics.py  n_playlist_musics.py  playlists.py  task.py  user_playlists.py  users.py
src/cron/: Dockerfile  execute.py  main-server.py  main.py  test.py
src/frontend/: Dockerfile
src/frontend/.streamlit/: config.toml
src/frontend/streamlit/: main.py
src/frontend/streamlit/libs/: lib.py  recommend.py
src/script/: 001_init.sh  002_create_table.sh
src/st_server/: Dockerfile
src/tests/: test.sqlite3  test_main.py  test_pytest.py
(+24 files in other folders)
